# cloudops-automation-lab

./: LICENSE  README.md  docker-compose.yml
app/: Dockerfile  pyproject.toml
app/src/: main.py
app/tests/: test_basic.py
observability/alertmanager/: alertmanager.yml
observability/prometheus/: prometheus.yml  rules.yml
postmortems/: 2026-xx-xx-incident-01.md
runbooks/: alert-service-down.md
