[project]
name = "cloudops-automation-lab"
version = "0.1.0"
description = "Demo service for IaC + observability + runbooks + postmortems"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "prometheus-client==0.21.1",
  "python-json-logger==2.0.7",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "httpx==0.28.1",
  "ruff==0.8.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
